--- a/index.html
+++ b/index.html
@@ -451,16 +451,16 @@
                         匯出 HTML (選取)
                     </button>
                     <button class="btn btn-success hidden" id="export-xlsx-btn">
-                        匯出 XLSX (全部)
+                        匯出全部為XLSX(維持個別工作表)
                     </button>
                     <button class="btn btn-success hidden" id="export-selected-xlsx-btn">
-                        匯出 XLSX (選取)
+                        匯出選取列為XLSX(維持個別工作表)
                     </button>
                     <button class="btn btn-success hidden" id="export-merged-xlsx-btn">
-                        匯出 XLSX (合併所有表格)
+                        合併為單一工作表XLSX
                     </button>
                     <button class="btn btn-secondary hidden" id="reset-view-btn">
-                        重設視圖
+                        回到最初
                     </button>
                 </div>
             </div>
