--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                     'dropAreaLoaded': 'drop-area-loaded',
                     'fileCount': 'file-count',
                     'fileNames': 'file-names',
-                    'clearFilesBtn': 'clear-files-btn'
+                    'clearFilesBtn': 'clear-files-btn',
                     'selectAllBtn': 'select-all-btn'
                 };
 
