--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ body.no-scroll {
     bottom: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 1000;
+    z-index: 9999;  /* 改為更高的值 */
     border-radius: 0; 
     border: none;
     cursor: default;
