--- a/guide.html
+++ b/guide.html
@@ -6,6 +6,7 @@
     <li>支援拖放或點擊上傳 <code>.xls</code> 和 <code>.xlsx</code> 檔案。</li>
     <li>可一次載入多個檔案，並自訂要匯入的工作表。</li>
     <li>提供「列表」和「網格」兩種檢視模式。</li>
+    <li><strong>新增</strong>：提供「合併檢視」模式，將所有表格整合成單一大表，並支援欄位操作。</li>
     <li>強大的資料列操作：即時搜尋、關鍵字勾選、刪除、反選等。</li>
     <li>支援多種匯出格式：HTML、XLSX（可選擇全部、僅選取，或合併為單一檔案）。</li>
 </ul>
@@ -77,4 +78,24 @@
     <li>點擊右上角的 <code>&times;</code> 或按 <code>Esc</code> 鍵退出。</li>
     <li>點擊「刪除選取列」僅刪除此表格中的勾選列。</li>
     <li>點擊「刪除此表」直接刪除這個表格。</li>
+</ul>
+
+<h3>5. 合併檢視模式 (新功能)</h3>
+<p>當您載入多個表格後，在「全局與匯出」區塊會出現一個「<strong>合併檢視</strong>」按鈕。點擊後會進入此特殊模式。</p>
+<ul>
+    <li><strong>單一表格</strong>：所有表格的資料列會被合併到一個大表格中。如果不同表格的欄位不同，系統會自動整合所有欄位，無資料的儲存格會顯示為空白。</li>
+    <li><strong>欄位排序</strong>：
+        <ul>
+            <li>點擊任何一個欄位標題 (例如「姓名」)，即可依該欄位內容進行排序。</li>
+            <li>再次點擊同一個標題，會在「升冪」和「降冪」之間切換。</li>
+        </ul>
+    </li>
+    <li><strong>欄位顯示/隱藏</strong>：
+        <ul>
+            <li>進入合併檢視後，會出現一個「<strong>欄位操作</strong>」按鈕。</li>
+            <li>點擊它會彈出一個面板，列出所有欄位。您可以取消勾選不想看到的欄位，然後點擊「套用」來隱藏它們。</li>
+        </ul>
+    </li>
+    <li><strong>保留列操作</strong>：在此模式下，您仍然可以使用「即時搜尋」、「依關鍵字勾選」、「刪除勾選列」等功能來操作合併後的所有資料列。</li>
+    <li><strong>返回多表檢視</strong>：操作完成後，點擊「<strong>返回多表檢視</strong>」按鈕即可回到原始的、分開的表格列表。</li>
 </ul>
