--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,7 @@
                 <button class="btn btn-secondary hidden" id="cancel-edits-btn">取消編輯</button>
                 <button class="btn btn-primary" id="add-new-row-btn">新增資料列</button>
                 <button class="btn btn-primary" id="copy-selected-rows-btn">複製選取列</button>
+                <button class="btn btn-warning" id="toggle-total-row-btn">新增/移除合計列</button>
                 <button class="btn btn-danger" id="delete-merged-rows-btn">刪除勾選列</button>
             </div>
             <div id="merge-view-content">
