--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <div class="page-container">
         
         <header class="page-header">
-            <h1>Excel 檢視器</h1>
+            <h1>Excel檔案彙整器</h1>
         </header>
         
         <main class="content-area">
@@ -151,4 +151,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
