--- a/guide.html
+++ b/guide.html
@@ -81,6 +81,18 @@
             </ul>
         </div>
         
+        <h3>⭐ 快速應用流程 (範例)</h3>
+        <p>這是在彙整多個檔案時，最快速的資料清理方式：</p>
+        <ol>
+            <li>載入您需要彙整的多個 Excel 檔案。</li>
+            <li>點擊 <code>合併檢視</code> 按鈕，將所有資料彙整到一個大表格中。</li>
+            <li>在「合併檢視」中，找到 <code>依指定欄位勾選</code> 區塊。</li>
+            <li>從下拉選單中，選擇一個您確定「有值即代表有效」的關鍵欄位 (例如："訂單編號" 或 "姓名")。</li>
+            <li>點擊 <code>勾選有值</code> 按鈕。</li>
+            <li>程式會自動勾選所有在該欄位「有資料」的資料列。這通常就是您需要保留的有效資料。</li>
+            <li>(可選) 接著，您可以點擊主介面上的 <code>反向選取</code>，然後 <code>刪除勾選列</code>，即可快速清除所有無效或空白的資料。</li>
+        </ol>
+
         <h3>資料編輯</h3>
         <ul>
             <li><code>編輯資料</code>：點擊後，表格進入編輯模式，您可以直接點擊儲存格來修改內容。</li>
